# TietoAssignment

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c  test.sh
CPU/: CMakeLists.txt
CPU/inc/: cpu.h
CPU/src/: cpu.c
Threads/: CMakeLists.txt
Threads/inc/: Threads.h  utils.h
Threads/src/: Threads.c  utils.c
firmware/: CMakeLists.txt  main.c
firmware/inc/: test.h
firmware/src/: main.c  test.c
